# ax-prover-base

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  unit_tests.yml
configs/: default.yaml  default_base_llm.yaml  prover_v2_qwen.yaml  tools.yaml
configs/claude_ablations/: claude4-5-fast-memory.yaml  claude4-5.yaml  claude4-6-fast-memory.yaml  claude4-6.yaml
configs/llm_comparison/: flash.yaml  flash_base.yaml  gpt52.yaml  gpt52_base.yaml  pro.yaml  pro_base.yaml  sonnet.yaml  sonnet_base.yaml
configs/long_run/: default_long_run.yaml  experience.yaml  full_system.yaml  memoryless.yaml  no_websearch.yaml  previous_k.yaml  single_shot.yaml
configs/thinking_ablation/: flash_low.yaml  flash_minimal.yaml  opus_high.yaml  opus_low.yaml  pro_low.yaml  sonnet_high.yaml  sonnet_low.yaml
gcp/: DEPLOY.md  Makefile  cloudbuild.base.yaml  cloudbuild.runner.yaml  env  env.example
gcp/docker/: Dockerfile.base  Dockerfile.runner  bootstrap_envsecrets.py  entrypoint.sh  upload_artifacts.py
gcp/scripts/: bootstrap.sh  build_base.sh  build_runner.sh  put_secret.sh  stop_jobs.sh  submit_batch_job.sh  sync_env_file_secret.sh  test_local.sh
notebooks/: analysis.ipynb  datasets_experiments.ipynb
src/ax_prover/: __init__.py  __main__.py  config.py  evaluators.py  main.py
src/ax_prover/commands/: __init__.py  configure.py  experiment.py  prove.py
src/ax_prover/configs/: .env.secrets.example  llms.yaml
src/ax_prover/models/: __init__.py  declaration.py  files.py  messages.py  output.py  proving.py
src/ax_prover/prover/: __init__.py  agent.py  memory.py  prompts.py
src/ax_prover/tools/: __init__.py  lean_search.py  registry.py  web_search.py
src/ax_prover/utils/: __init__.py  build.py  config.py  files.py  git.py  google_auth.py  lean_interact.py  lean_parsing.py  llm.py  proving.py
src/ax_prover/utils/logging/: __init__.py  langsmith.py  logger.py
tests/unit/: test_evaluators.py
tests/unit/fixtures/: sample.lean
tests/unit/models/: test_files.py  test_messages.py  test_proving.py
tests/unit/prover/: test_agent_routing.py  test_memory.py
tests/unit/tools/: test_lean_search.py  test_registry.py
tests/unit/utils/: test_build.py  test_config.py  test_files.py  test_lean_parsing.py
